...
    <item
        android:id="@+id/nav_requests"
        android:icon="@drawable/ic_notifications"
        android:title="Requests" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="Search" />

    <item
        android:id="@+id/nav_moods"
        android:icon="@drawable/ic_mood_history"
...
